--- a/src/app.html
+++ b/src/app.html
@@ -1,12 +1,21 @@
 <!doctype html>
-<html lang="en">
+<html lang="sv">
 	<head>
 		<meta charset="utf-8" />
-
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="32x32"
+			href="%sveltekit.assets%/favicon-32x32.png"
+		/>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="16x16"
+			href="%sveltekit.assets%/favicon-16x16.png"
+		/>
 		<link rel="manifest" href="%sveltekit.assets%/site.webmanifest" />
-
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
