--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,11 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link
+			rel="apple-touch-icon"
+			sizes="192x192"
+			href="%sveltekit.assets%/assets/icons/icon-192x192.png"
+		/>
+		<link
 			rel="icon"
 			type="image/png"
 			sizes="32x32"
@@ -16,6 +21,7 @@
 			href="%sveltekit.assets%/favicon-16x16.png"
 		/>
 		<link rel="manifest" href="%sveltekit.assets%/site.webmanifest" />
+
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
