--- a/src/app.html
+++ b/src/app.html
@@ -20,7 +20,7 @@
 			sizes="16x16"
 			href="%sveltekit.assets%/favicon-16x16.png"
 		/>
-		<link rel="manifest" href="%sveltekit.assets%/site.webmanifest" />
+		<link rel="manifest" href="%sveltekit.assets%/app.webmanifest" />
 
 		%sveltekit.head%
 	</head>
