--- a/src/app.html
+++ b/src/app.html
@@ -22,6 +22,8 @@
 		/>
 		<link rel="manifest" href="%sveltekit.assets%/app.webmanifest" />
 
+		<title>Kamrat Kompis®</title>
+
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
