--- a/src/app.html
+++ b/src/app.html
@@ -3,6 +3,9 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="description" content="Kamrat Kompis® förenklar din vardagsekonomi genom att låta var
+		och en bidra efter förmåga, och få tillbaka efter behov. Det är jättelätt
+		att komma igång!">
 		<link
 			rel="apple-touch-icon"
 			sizes="192x192"
