--- a/src/app.html
+++ b/src/app.html
@@ -3,9 +3,38 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<meta name="description" content="Kamrat Kompis® förenklar din vardagsekonomi genom att låta var
+
+		<title>Kamrat Kompis®</title>
+		<meta
+			name="description"
+			content="Kamrat Kompis® förenklar din vardagsekonomi genom att låta var
 		och en bidra efter förmåga, och få tillbaka efter behov. Det är jättelätt
-		att komma igång!">
+		att komma igång!"
+		/>
+
+		<!-- Open Graph / Facebook -->
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://kompis.vercel.app" />
+		<meta property="og:title" content="Kamrat Kompis®" />
+		<meta
+			property="og:description"
+			content="Kamrat Kompis® förenklar din vardagsekonomi genom att låta var och en bidra efter förmåga, och få tillbaka efter behov. Det är jättelätt att komma igång!"
+		/>
+		<meta property="og:image" content="%sveltekit.assets%/kompis-splash.png" />
+
+		<!-- Twitter -->
+		<meta property="twitter:card" content="summary_large_image" />
+		<meta property="twitter:url" content="https://kompis.vercel.app" />
+		<meta property="twitter:title" content="Kamrat Kompis®" />
+		<meta
+			property="twitter:description"
+			content="Kamrat Kompis® förenklar din vardagsekonomi genom att låta var och en bidra efter förmåga, och få tillbaka efter behov. Det är jättelätt att komma igång!"
+		/>
+		<meta
+			property="twitter:image"
+			content="%sveltekit.assets%/kompis-splash.png"
+		/>
+
 		<link
 			rel="apple-touch-icon"
 			sizes="192x192"
@@ -24,8 +53,6 @@
 			href="%sveltekit.assets%/favicon-16x16.png"
 		/>
 		<link rel="manifest" href="%sveltekit.assets%/app.webmanifest" />
-
-		<title>Kamrat Kompis®</title>
 
 		%sveltekit.head%
 	</head>
