--- a/src/app.html
+++ b/src/app.html
@@ -20,7 +20,10 @@
 			property="og:description"
 			content="Kamrat Kompis® förenklar din vardagsekonomi genom att låta var och en bidra efter förmåga, och få tillbaka efter behov. Det är jättelätt att komma igång!"
 		/>
-		<meta property="og:image" content="%sveltekit.assets%/kompis-splash.png" />
+		<meta
+			property="og:image"
+			content="https://kompis.vercel.app/kompis-splash.png"
+		/>
 
 		<!-- Twitter -->
 		<meta property="twitter:card" content="summary_large_image" />
@@ -32,7 +35,7 @@
 		/>
 		<meta
 			property="twitter:image"
-			content="%sveltekit.assets%/kompis-splash.png"
+			content="https://kompis.vercel.app/kompis-splash.png"
 		/>
 
 		<link
