--- a/src/app.html
+++ b/src/app.html
@@ -41,7 +41,7 @@
 		<link
 			rel="apple-touch-icon"
 			sizes="192x192"
-			href="%sveltekit.assets%/assets/icons/icon-192x192.png"
+			href="https://kompis.vercel.app/assets/icons/icon-192x192.png"
 		/>
 		<link
 			rel="icon"
@@ -55,7 +55,7 @@
 			sizes="16x16"
 			href="%sveltekit.assets%/favicon-16x16.png"
 		/>
-		<link rel="manifest" href="%sveltekit.assets%/app.webmanifest" />
+		<link rel="manifest" href="https://kompis.vercel.app/app.webmanifest" />
 
 		%sveltekit.head%
 	</head>
